overflow fixes

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -363,13 +363,14 @@ img.home-image {
 }
 
 .autocomplete {
-    position : absolute;
-    top      : 0;
-    height   : 80px;
-    width    : 100%;
-    overflow : scroll;
-    z-index  : 2;
-    padding  : 5px 5px 5px 15px;
+    position   : absolute;
+    top        : 0;
+    height     : 80px;
+    width      : 100%;
+    overflow-y : scroll;
+    overflow-x : hidden;
+    z-index    : 2;
+    padding    : 5px 5px 5px 15px;
 }
 
 .autocomplete .user {
